# segpaste

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: bench-gpu.yml  bench.yml  ci.yml  docs.yml  publish.yml
api/: index.html
benchmarks/: README.md  _fixture.py  _harness.py  _padded_fixture.py  baseline.json  baseline_gpu.json  bench_batch_copy_paste.py  bench_copy_paste.py  compare.py
benchmarks/comparison/: README.md  __init__.py  aggregate.py  schemas.py  sweep.py  workload.py
benchmarks/comparison/_refs/: torchvision_simple_copy_paste.py
benchmarks/comparison/impls/: __init__.py  _base.py  mmdet_copypaste.py  segpaste_batchcopypaste.py  torchvision_simple.py
docs/: api.md  design-principles.md  getting-started.md  index.md  migration.md
docs/adrs/: 0001-dense-sample.md  0002-performance-baseline.md  0003-hard-deprecation-stance.md  0004-batched-dense-sample.md  0005-dense-composite.md  0006-panoptic-paste.md  0007-depth-aware-paste.md  0008-batch-copy-paste.md  0009-visual-validation-and-presets.md  0010-patch-aligned-paste.md  0011-instance-bank.md  0012-image-harmonization.md  0013-fiftyone-visualizer-substrate.md  0014-batchauditpacket-forward-return-sidecar.md  0015-thirty-minute-integration.md  0016-throughput-comparison.md  0017-cpu-perf-parity.md  0018-perf-parity-optimizations.md  index.md
docs/reference/: api.md  integrations.md  presets.md
examples/: COCO_dataset.py  basic_usage.py  copy_paste_demo.py
scripts/: build_eval_subset.py  build_instance_bank.py  check_no_binaries.py  compile_allowlist.txt  compile_explain.py  fiftyone_app.py  profile_segpaste_cpu.py  visualize_preset.py
search/: search_index.json
src/segpaste/: __init__.py  blending.py  compile_util.py  config.py  copy_paste.py  core.py  data_types.py  dataset.py  lsj.py  transforms.py  utils.py
src/segpaste/_internal/: __init__.py  composite.py  imports.py
src/segpaste/_internal/bank/: __init__.py  _meta.py  _record.py  build.py  lmdb_backend.py  loader.py  memmap.py  protocol.py  sampler.py  webdataset_backend.py
src/segpaste/_internal/gpu/: __init__.py  affine_propagate.py  batched_placement.py  harmonize.py  pad_canvas.py  tile_composite.py
src/segpaste/_internal/invariants/: __init__.py  _report.py  depth.py  instance.py  normals.py  panoptic.py  semantic.py
src/segpaste/_internal/viz/: __init__.py  coco_source.py  contact_sheet.py  fiftyone_export.py  invariant_runner.py  manifest.py  overlay.py  paste_stats.py  pipeline.py  synthetic.py  writer.py
src/segpaste/augmentation/: __init__.py  batch_copy_paste.py  copy_paste.py  lsj.py  sanitize.py  source.py  source_config.py  torchvision.py
src/segpaste/integrations/: __init__.py  coco.py  huggingface.py  lightning.py  torchvision.py
src/segpaste/presets/: __init__.py  _base.py  coco_instance.py  coco_panoptic.py
src/segpaste/processing/: __init__.py  blending.py  masks.py  placement.py
src/segpaste/types/: __init__.py  audit.py  batched_dense_sample.py  data_structures.py  dense_sample.py  padded_batched_dense_sample.py  type_aliases.py
tests/: conftest.py  shared.py  test_affine_propagate.py  test_audit_packet.py  test_bank_build.py  test_bank_compile_clean.py  test_bank_lmdb_roundtrip.py  test_bank_loader.py  test_bank_memmap_roundtrip.py  test_bank_protocol.py  test_bank_sampler.py  test_bank_source.py  test_bank_webdataset_roundtrip.py  test_batch_copy_paste_audit_parity.py  test_batch_copy_paste_bitwise.py  test_batch_copy_paste_ks.py  test_batch_copy_paste_lsj.py  test_batch_copy_paste_shape.py  test_batched_dense_sample.py  test_batched_placement.py  test_coco.py  test_compile_clean.py  test_config_validation.py  test_copy_paste.py  test_copy_paste_fuzz.py  test_core.py  test_dense_composite.py  test_fiftyone_integration.py  test_harmonize.py  test_huggingface_batch.py  test_huggingface_roundtrip.py  test_identity_propagator.py  test_invariant_matrix.py  test_invariants_internal.py  test_invariants_runner.py  test_lightning_adapter.py  test_lightning_missing_import.py  test_no_binaries_guard.py  test_pad_canvas.py  test_padded_batched_dense_sample.py  (+15 more)
tests/fixtures/: __init__.py  batch_copy_paste_v0_3_0.pt  ks_snapshot.pt  loader.py  manifest.toml
tests/fixtures/synthetic/: __init__.py  builders.py  depth_two_planes.pt  empty_instance.pt  normals_sphere_patch.pt  panoptic_stuff_and_things.pt  semantic_with_ignore.pt  two_overlapping_things.pt
tests/invariants/: __init__.py  _require.py  depth.py  instance.py  normals.py  panoptic.py  semantic.py
tests/strategies/: __init__.py  dense_sample.py
