[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "segpaste"
version = "0.2.0"
description = "A Python package for copy-paste functionality. Torch only reimplementation of https://arxiv.org/abs/2012.07177"
authors = [{ name = "Noé Fontana", email = "noe.fontana.pro@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["torch>=2.8", "torchvision>=0.23.0"]

[dependency-groups]
coco = ["faster-coco-eval>=1.6.8", "fiftyone>=1.8.0"]
dev = [
    "ruff>=0.13.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/NoeFontana/segpaste"
Repository = "https://github.com/NoeFontana/segpaste"
Issues = "https://github.com/NoeFontana/segpaste/issues"

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["src/segpaste"]
artifacts = ["src/segpaste/py.typed"]

[tool.ruff]
lint.select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]
lint.ignore = []

lint.fixable = ["ALL"]
lint.unfixable = []

# Exclude a variety of commonly ignored directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.format]
# Like Black, use double quotes for strings
quote-style = "double"

# Like Black, indent with spaces, rather than tabs
indent-style = "space"

# Like Black, respect magic trailing commas
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["segpaste"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=segpaste",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
show_error_codes = true
strict = true

[[tool.mypy.overrides]]
module = ["torchvision.*", "fiftyone.*", "faster_coco_eval.*"]

# The rule to apply
ignore_missing_imports = true
