[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "segpaste"
dynamic = ["version"]
description = "A Python package for copy-paste functionality. Torch only reimplementation of https://arxiv.org/abs/2012.07177"
authors = [{ name = "Noé Fontana", email = "noe.fontana.pro@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "faster-coco-eval>=1.6.8",
    "pydantic>=2.12.5",
    "torch>=2.8",
    "torchvision>=0.23.0",
]

[dependency-groups]
coco = ["fiftyone>=1.8.0"]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
dev = [
    "ruff>=0.13.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "pyright>=1.1.380",
    "hypothesis>=6.150.0",
]
bench = ["numpy>=1.26"]

[project.urls]
Homepage = "https://github.com/NoeFontana/segpaste"
Repository = "https://github.com/NoeFontana/segpaste"
Issues = "https://github.com/NoeFontana/segpaste/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["src/segpaste"]
artifacts = ["src/segpaste/py.typed"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.ruff]
lint.select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "ARG",
    "SIM",
    "UP",
    "N",
    "S",
    "RUF",
]
lint.ignore = ["N812", "S311"]

lint.fixable = ["ALL"]
lint.unfixable = []

# Exclude a variety of commonly ignored directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"benchmarks/*" = ["S101", "T201"]
"scripts/*" = ["S101", "S607", "T201"]

[tool.ruff.format]
# Like Black, use double quotes for strings
quote-style = "double"

# Like Black, indent with spaces, rather than tabs
indent-style = "space"

# Like Black, respect magic trailing commas
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["segpaste"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=segpaste",
    "--cov-report=html",
    "--cov-report=term-missing",
]
markers = [
    "invariant: ADR-0001 per-modality invariant check (see tests/test_invariant_matrix.py)",
]

[tool.coverage.report]
# Ratchet floor. Measured 81–83% on the P0.E post-deletion baseline; 80 leaves
# a sliver of headroom for Hypothesis-driven coverage noise. Raise only when
# the observed floor moves up — never pin aspirationally.
fail_under = 80
skip_covered = false
show_missing = true

[tool.pyright]
include = ["src", "tests", "examples", "benchmarks"]
pythonVersion = "3.11"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
# torchvision, fiftyone, and faster_coco_eval don't ship complete type stubs.
# Pyright falls back to source-level inference via useLibraryCodeForTypes
# (default true), but partial inference surfaces as the reports below.
#
# P0.E audit (ADR-0001 Part (i)): every first-party hit for these rules, when
# enabled, comes from a line calling into torchvision | fiftyone |
# faster_coco_eval. We tighten from "none" to "warning": pyright still emits
# them for dev visibility (useful signal if a stub appears upstream), but CI's
# `uv run pyright` exits 0 on warnings so there is no regression risk. Promote
# back to "error" in a follow-up ADR once the relevant stubs land.
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownVariableType = "warning"
